--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header__content">
       <div class="header__logo-container">
         <div class="header__logo-img-cont">
-          <img src="./assets/jpeg/Alan-Miste.jpg" alt="Ram Maheshwari Logo Image" class="header__logo-img" />
+          <img src="./assets/jpeg/Alan-Miste.jpg" alt="Alan Miste Logo Image" class="header__logo-img" />
         </div>
         <span class="header__logo-sub">Alan Miste</span>
       </div>
@@ -73,7 +73,12 @@
   </header>
   <section class="home-hero">
     <div class="home-hero__content">
-      <h1 class="heading-primary">Hey, My name is Alan Miste</h1>
+      <!-- <h1 class="heading-primary">Hey, My name is Alan Miste</h1> -->
+      <h1 class="heading-primary">
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Hey there! 👋, I&apos;m Alan.","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.", "I ❤️️ Design."]'>
+          <span class="wrap"></span>
+        </a>
+      </h1>
       <div class="home-hero__info">
         <p class="text-primary">
           I graduated with a BA in Computer Systems since 2010, I worked for four years as a Technical Support Officer
@@ -104,8 +109,8 @@
         </a>
       </div>
       <div class="home-hero__social">
-        <a href="#" target="_blank" class="home-hero__social-icon-link">
-          <img src="./assets/png/yt-ico.png" alt="icon" class="home-hero__social-icon" />
+        <a href="https://www.facebook.com/alanmiste" target="_blank" class="home-hero__social-icon-link">
+          <img src="./assets/png/facebook-ico.png" alt="icon" class="home-hero__social-icon" />
         </a>
       </div>
       <div class="home-hero__social">
@@ -176,7 +181,63 @@
     </div>
   </section>
   <section id="projects" class="projects sec-pad">
-    <!-- here will be the projects -->
+    <div class="main-container">
+      <h2 class="heading heading-sec heading-sec__mb-bg">
+        <span class="heading-sec__main">Projects</span>
+        <span class="heading-sec__sub">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
+          tempora explicabo quae quod deserunt eius sapiente
+        </span>
+      </h2>
+
+      <div class="projects__content">
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
+              loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Project 1</h3>
+            <p class="projects__row-content-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              facilis tempora, explicabo quae quod deserunt eius sapiente
+              praesentium.
+            </p>
+            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+          </div>
+        </div>
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
+              loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Project 2</h3>
+            <p class="projects__row-content-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              facilis tempora, explicabo quae quod deserunt eius sapiente
+              praesentium.
+            </p>
+            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+          </div>
+        </div>
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
+              loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Project 3</h3>
+            <p class="projects__row-content-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+              facilis tempora, explicabo quae quod deserunt eius sapiente
+              praesentium.
+            </p>
+            <a href="./project-3.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <section id="contact" class="contact sec-pad dynamicBg">
     <div class="main-container">
@@ -228,8 +289,8 @@
             <a target="_blank" rel="noreferrer" href="https://twitter.com/AlanMiste">
               <img class="main-footer__icon" src="./assets/png/twitter-ico.png" alt="icon" />
             </a>
-            <a target="_blank" rel="noreferrer" href="#">
-              <img class="main-footer__icon" src="./assets/png/yt-ico.png" alt="icon" />
+            <a target="_blank" rel="noreferrer" href="https://www.facebook.com/alanmiste">
+              <img class="main-footer__icon" src="./assets/png/facebook-ico.png" alt="icon" />
             </a>
             <a target="_blank" rel="noreferrer" href="https://www.instagram.com/alanmiste">
               <img class="main-footer__icon main-footer__icon--mr-none" src="./assets/png/insta-ico.png" alt="icon" />
