add projects screenshot

--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
       <div class="projects__content">
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
+            <img src="./assets/jpeg/project1.jpg" alt="Project 1 Screenshot. Full-Stack Cookbook with React" class="projects__row-img"
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Project 1</h3>
+            <h3 class="projects__row-content-title">Cookbook</h3>
             <p class="projects__row-content-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
               facilis tempora, explicabo quae quod deserunt eius sapiente
@@ -208,11 +208,11 @@
         </div>
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
+            <img src="./assets/jpeg/project2.jpg" alt="Project 2 Screenshot. Todo List" class="projects__row-img"
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Project 2</h3>
+            <h3 class="projects__row-content-title">Todo List</h3>
             <p class="projects__row-content-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
               facilis tempora, explicabo quae quod deserunt eius sapiente
@@ -223,11 +223,11 @@
         </div>
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-mockup-example.jpeg" alt="Software Screenshot" class="projects__row-img"
+            <img src="./assets/jpeg/project3.jpg" alt="Project 3 Screenshot. Simple Calculator" class="projects__row-img"
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Project 3</h3>
+            <h3 class="projects__row-content-title">Simple Calculator</h3>
             <p class="projects__row-content-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
               facilis tempora, explicabo quae quod deserunt eius sapiente
