--- a/index.html
+++ b/index.html
@@ -199,11 +199,10 @@
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Cookbook</h3>
             <p class="projects__row-content-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-              facilis tempora, explicabo quae quod deserunt eius sapiente
-              praesentium.
+              A Cookbook site is a simple site for displaying cooking recipes.
+               I coded it completely (front-end and back-end).
             </p>
-            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
           </div>
         </div>
         <div class="projects__row">
