start fixing project 2 an 3 pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <div class="home-hero__content">
       <!-- <h1 class="heading-primary">Hey, My name is Alan Miste</h1> -->
       <h1 class="heading-primary">
-        <a href="" class="typewrite" data-period="2000" data-type='[ "Hey there! 👋, I&apos;m Alan.","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.", "I ❤️️ Design."]'>
+        <a href="" class="typewrite" data-period="2000"
+          data-type='[ "Hey there! 👋, I&apos;m Alan.","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.", "I ❤️️ Design."]'>
           <span class="wrap"></span>
         </a>
       </h1>
@@ -114,7 +115,8 @@
         </a>
       </div>
       <div class="home-hero__social">
-        <a href="https://www.instagram.com/alanmiste" target="_blank" class="home-hero__social-icon-link home-hero__social-icon-link--bd-none">
+        <a href="https://www.instagram.com/alanmiste" target="_blank"
+          class="home-hero__social-icon-link home-hero__social-icon-link--bd-none">
           <img src="./assets/png/insta-ico.png" alt="icon" class="home-hero__social-icon" />
         </a>
       </div>
@@ -146,13 +148,14 @@
               Germany. During the period of further education <strong>(Weiterbildung)</strong> within the
               <strong> web development course </strong>,
               I completed several projects were as a training, in which web development techniques were used,
-               whether for the <strong>front-end</strong> or <strong>back-end</strong>.
-              
+              whether for the <strong>front-end</strong> or <strong>back-end</strong>.
+
             </p>
             <p class="about__content-details-para">
-              I'm a bit of a digital product junky. Over the years, I've used hundreds of web and mobile apps. I'm passionate about programming and coding. I also have hobbies in designing and editing photos,
-               in addition to some other hobbies outside the technical field.
-                I am also interested in astronomy. Feel free to
+              I'm a bit of a digital product junky. Over the years, I've used hundreds of web and mobile apps. I'm
+              passionate about programming and coding. I also have hobbies in designing and editing photos,
+              in addition to some other hobbies outside the technical field.
+              I am also interested in astronomy. Feel free to
               <strong>contact</strong> me here.
             </p>
           </div>
@@ -193,14 +196,14 @@
       <div class="projects__content">
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project1.jpg" alt="Project 1 Screenshot. Full-Stack Cookbook with React" class="projects__row-img"
-              loading="lazy" />
+            <img src="./assets/jpeg/project1.jpg" alt="Project 1 Screenshot. Full-Stack Cookbook with React"
+              class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Cookbook</h3>
             <p class="projects__row-content-desc">
               A Cookbook site is a simple site for displaying cooking recipes.
-               I coded it completely (front-end and back-end).
+              I coded it completely (front-end and back-end).
             </p>
             <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
           </div>
@@ -213,17 +216,16 @@
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Todo List</h3>
             <p class="projects__row-content-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-              facilis tempora, explicabo quae quod deserunt eius sapiente
-              praesentium.
+              Todo list app for writing daily tasks. Use your browser to record your daily tasks instead of pen and
+              paper.
             </p>
-            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
           </div>
         </div>
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project3.jpg" alt="Project 3 Screenshot. Simple Calculator" class="projects__row-img"
-              loading="lazy" />
+            <img src="./assets/jpeg/project3.jpg" alt="Project 3 Screenshot. Simple Calculator"
+              class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Simple Calculator</h3>
@@ -232,7 +234,7 @@
               facilis tempora, explicabo quae quod deserunt eius sapiente
               praesentium.
             </p>
-            <a href="./project-3.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Case Study</a>
+            <a href="./project-3.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
           </div>
         </div>
       </div>
