--- a/project-1.html
+++ b/project-1.html
@@ -74,6 +74,9 @@
   <section class="project-cs-hero">
     <div class="project-cs-hero__content">
       <h1 class="heading-primary">Cookbook</h1>
+      <div class="project-cs-hero__cta">
+        <a href="https://cbreact.herokuapp.com" class="btn btn--bg" target="_blank">Live Link</a>
+      </div>
       <div class="home-hero__mouse-scroll-cont">
         <div class="mouse"></div>
       </div>
@@ -122,7 +125,7 @@
           </div>
           <div class="project-details__links">
             <h3 class="project-details__content-title">See Live</h3>
-            <a href="https://cbreact.herokuapp.com/" class="btn btn--med btn--theme project-details__links-btn" target="_blank">Live Link</a>
+            <a href="https://cbreact.herokuapp.com" class="btn btn--med btn--theme project-details__links-btn" target="_blank">Live Link</a>
             <a href="https://github.com/alanmiste/full-stack-cookbook" class="btn btn--med btn--theme-inv project-details__links-btn" target="_blank">Code Link</a>
           </div>
         </div>
