--- a/index.html
+++ b/index.html
@@ -230,9 +230,7 @@
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Simple Calculator</h3>
             <p class="projects__row-content-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-              facilis tempora, explicabo quae quod deserunt eius sapiente
-              praesentium.
+              It's a simple calculator app with React.
             </p>
             <a href="./project-3.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
           </div>
