add Java to header and about

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- <h1 class="heading-primary">Hey, My name is Alan Miste</h1> -->
       <h1 class="heading-primary">
         <a href="" class="typewrite" data-period="2000"
-          data-type='[ "Hey there! 👋, I&apos;m Alan.","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.", "I ❤️️ Design."]'>
+          data-type='[ "Hey there! 👋, I&apos;m Alan.","Java-Sowftware Developer","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.", "I ❤️️ Design."]'>
           <span class="wrap"></span>
         </a>
       </h1>
@@ -85,7 +85,7 @@
           I graduated with a BA in Computer Systems since 2010, I worked for four years as a Technical Support Officer
           in Syria before I had to emigrate. I am passionate about programming, I learned some programming languages at
           university such as C, C++, C# and Java.
-          After I moved to Germany I took courses in web development, I can now describe myself as a MERN-stack
+          After I moved to Germany I took courses in Web Development and Java Development, I can now describe myself as a Junior MERN-stack / Java
           developer with a certificate from WBS Coding School.
         </p>
       </div>
@@ -133,7 +133,7 @@
           I graduated with a BA in Computer Systems since 2010, I worked for four years as a Technical Support Officer
           in Syria before I had to emigrate. I am passionate about programming, I learned some programming languages at
           university such as C, C++, C# and Java.
-          After I moved to Germany I took courses in web development, I can now describe myself as a MERN-stack
+          After I moved to Germany I took courses in Web Development and Java development I can now describe myself as a Junior MERN-stack /Java
           developer with a certificate from WBS Coding School.
         </span>
       </h2>
@@ -144,9 +144,9 @@
             <p class="about__content-details-para">
               Hey! It's
               <strong>Alan Miste/Hassan</strong>
-              and I'm a <strong> Frontend/MERN-Stack Web Developer </strong> located in
+              and I'm a <strong> Frontend/MERN-Stack Web Developer </strong> <strong> Java Developer </strong> located in
               Germany. During the period of further education <strong>(Weiterbildung)</strong> within the
-              <strong> web development course </strong>,
+              <strong> web development course and Java-Sowftware development </strong>,
               I completed several projects were as a training, in which web development techniques were used,
               whether for the <strong>front-end</strong> or <strong>back-end</strong>.
 
