Add SpaceGeeksCorner photo

--- a/index.html
+++ b/index.html
@@ -194,6 +194,21 @@
       </h2>
 
       <div class="projects__content">
+
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/SgcScreenshot-7.png" alt="Project 1 Screenshot. Full-Stack Cookbook with React"
+              class="projects__row-img" loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Space Geeks Corner</h3>
+            <p class="projects__row-content-desc">
+              It is an application that allows viewing of various images fetched from NASA via its API. The logged in user can add photos to his favourites or delete them if he no longer wants them. He can also create T-shirts Mockup from the photos he likes with just one click!
+            </p>
+            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
+          </div>
+        </div>
+
         <div class="projects__row">
           <div class="projects__row-img-cont">
             <img src="./assets/jpeg/project1.jpg" alt="Project 1 Screenshot. Full-Stack Cookbook with React"
