Update Projects erst text

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <p class="about__content-details-para">
               Hey! It's
               <strong>Alan Miste/Hassan</strong>
-              and I'm a <strong> Frontend/MERN-Stack Web Developer </strong> <strong> Java Developer </strong> located in
+              and I'm a <strong> Frontend/MERN-Stack Web Developer </strong> ,<strong> Java Developer </strong> located in
               Germany. During the period of further education <strong>(Weiterbildung)</strong> within the
               <strong> web development course and Java-Sowftware development </strong>,
               I completed several projects were as a training, in which web development techniques were used,
@@ -188,8 +188,7 @@
       <h2 class="heading heading-sec heading-sec__mb-bg">
         <span class="heading-sec__main">Projects</span>
         <span class="heading-sec__sub">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-          tempora explicabo quae quod deserunt eius sapiente
+          These are some of my projects that I worked on to increase my experience.
         </span>
       </h2>
 
