--- a/index.html
+++ b/index.html
@@ -164,16 +164,22 @@
         <div class="about__content-skills">
           <h3 class="about__content-title">My Skills</h3>
           <div class="skills">
-            <div class="skills__skill">HTML</div>
-            <div class="skills__skill">CSS</div>
+            <div class="skills__skill">Java</div>
+            <div class="skills__skill">Spring Boot</div>
+            <div class="skills__skill">TypeScript</div>
             <div class="skills__skill">JavaScript - ES6</div>
             <div class="skills__skill">React</div>
+            <div class="skills__skill">Python</div>
+            <div class="skills__skill">HTML</div>
+            <div class="skills__skill">CSS</div>
             <div class="skills__skill">SASS</div>
-            <div class="skills__skill">GIT</div>
+            <div class="skills__skill">Rest APIs</div>
+            <div class="skills__skill">GIT/Github</div>
+            <div class="skills__skill">CI/CD</div>
             <div class="skills__skill">MongoDB</div>
             <div class="skills__skill">MySql</div>
             <div class="skills__skill">Node.js</div>
-            <div class="skills__skill">Python</div>
+            <div class="skills__skill">Docker</div>
             <div class="skills__skill">Wordpress</div>
             <div class="skills__skill">Photoshop</div>
             <div class="skills__skill">Illustrator</div>
