Update SpaceGeeksCorner page.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <h3 class="about__content-title">My Skills</h3>
           <div class="skills">
             <div class="skills__skill">Java</div>
-            <div class="skills__skill">Spring Boot</div>
+            <div class="skills__skill">Spring Framework</div>
             <div class="skills__skill">TypeScript</div>
             <div class="skills__skill">JavaScript - ES6</div>
             <div class="skills__skill">React</div>
@@ -202,7 +202,7 @@
 
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/SgcScreenshot-7.png" alt="Project 1 Screenshot. Full-Stack Cookbook with React"
+            <img src="./assets/jpeg/SgcScreenshot-7.png" alt="Space Geeks Corner Screenshot"
               class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
@@ -210,7 +210,7 @@
             <p class="projects__row-content-desc">
               It is an application that allows viewing of various images fetched from NASA via its API. The logged in user can add photos to his favourites or delete them if he no longer wants them. He can also create T-shirts Mockup from the photos he likes with just one click!
             </p>
-            <a href="https://github.com/alanmiste/SpaceGeeksCorner" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
+            <a href="./spacegeekscorner.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
           </div>
         </div>
 
