--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <p class="projects__row-content-desc">
               It is an application that allows viewing of various images fetched from NASA via its API. The logged in user can add photos to his favourites or delete them if he no longer wants them. He can also create T-shirts Mockup from the photos he likes with just one click!
             </p>
-            <a href="./spacegeekscorner.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
+            <a href="./spacegeekscorner.html" class="btn btn--med btn--theme dynamicBgClr">More...</a>
           </div>
         </div>
 
