Change ptofile photo.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header__content">
       <div class="header__logo-container">
         <div class="header__logo-img-cont">
-          <img src="./assets/jpeg/Alan-Miste.jpg" alt="Alan Miste Logo Image" class="header__logo-img" />
+          <img src="./assets/jpeg/AlanMiste-ProPic.png" alt="Alan Miste Logo Image" class="header__logo-img" />
         </div>
         <span class="header__logo-sub">Alan Miste</span>
       </div>
@@ -225,7 +225,7 @@
               A Cookbook site is a simple site for displaying cooking recipes.
               I coded it completely (front-end and back-end).
             </p>
-            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
+            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr">More...</a>
           </div>
         </div>
         <div class="projects__row">
@@ -239,7 +239,7 @@
               Todo list app for writing daily tasks. Use your browser to record your daily tasks instead of pen and
               paper.
             </p>
-            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
+            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr">More...</a>
           </div>
         </div>
         <div class="projects__row">
@@ -252,7 +252,7 @@
             <p class="projects__row-content-desc">
               It's a simple calculator app with React.
             </p>
-            <a href="./project-3.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">More...</a>
+            <a href="./project-3.html" class="btn btn--med btn--theme dynamicBgClr">More...</a>
           </div>
         </div>
       </div>
