--- a/project-2.html
+++ b/project-2.html
@@ -21,7 +21,7 @@
     <div class="header__content">
       <div class="header__logo-container">
         <div class="header__logo-img-cont">
-          <img src="./assets/jpeg/Alan-Miste.jpg" alt="Alan Miste Logo Image" class="header__logo-img" />
+          <img src="./assets/jpeg/AlanMiste-ProPic.png" alt="Alan Miste Logo Image" class="header__logo-img" />
         </div>
         <span class="header__logo-sub">Alan Miste</span>
       </div>
