Update about me.

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       </h1>
       <div class="home-hero__info">
         <p class="text-primary">
-          I graduated with a BA in Computer Systems since 2010, I worked for four years as a Technical Support Officer
+          <!-- I graduated with a BA in Computer Systems since 2010, I worked for four years as a Technical Support Officer
           in Syria before I had to emigrate. I am passionate about programming, I learned some programming languages at
           university such as C, C++, C# and Java.
-          After I moved to Germany I took courses in Web Development and Java Development, I can now describe myself as a Junior MERN-stack / Java
-          developer with a certificate from WBS Coding School.
+          After I moved to Germany I took courses in Web Development and Java Development, I can now describe myself as a 
+          Junior MERN-stack / Java-Sowftware developer. -->
         </p>
       </div>
       <div class="home-hero__cta">
@@ -133,8 +133,8 @@
           I graduated with a BA in Computer Systems since 2010, I worked for four years as a Technical Support Officer
           in Syria before I had to emigrate. I am passionate about programming, I learned some programming languages at
           university such as C, C++, C# and Java.
-          After I moved to Germany I took courses in Web Development and Java development I can now describe myself as a Junior MERN-stack /Java
-          developer with a certificate from WBS Coding School.
+          After I moved to Germany I took courses in Web Development and Java Development, I can now describe myself as a 
+          Junior MERN-stack / Java-Sowftware developer.
         </span>
       </h2>
       <div class="about__content">
@@ -144,7 +144,7 @@
             <p class="about__content-details-para">
               Hey! It's
               <strong>Alan Miste/Hassan</strong>
-              and I'm a <strong> Frontend/MERN-Stack Web Developer </strong> ,<strong> Java Developer </strong> located in
+              and I'm a <strong> Frontend/MERN-Stack Web Developer </strong> ,<strong> Java Software Developer </strong> located in
               Germany. During the period of further education <strong>(Weiterbildung)</strong> within the
               <strong> web development course and Java-Sowftware development </strong>,
               I completed several projects were as a training, in which web development techniques were used,
@@ -152,7 +152,7 @@
 
             </p>
             <p class="about__content-details-para">
-              I'm a bit of a digital product junky. Over the years, I've used hundreds of web and mobile apps. I'm
+              I'm a bit of a digital product geek. Over the years, I've used hundreds of web and mobile apps. I'm
               passionate about programming and coding. I also have hobbies in designing and editing photos,
               in addition to some other hobbies outside the technical field.
               I am also interested in astronomy. Feel free to
