--- a/project-2.html
+++ b/project-2.html
@@ -155,7 +155,7 @@
         <div class="main-footer__row main-footer__row-2">
           <h4 class="heading heading-sm text-lt">Alan Miste</h4>
           <p class="main-footer__short-desc">
-            MERN-Stack Developer
+            Java-Software / MERN-Stack Developer
           </p>
         </div>
       </div>
