Add Todo-App to index.

--- a/index.html
+++ b/index.html
@@ -216,6 +216,21 @@
 
         <div class="projects__row">
           <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/SgcScreenshot-7.png" alt="Todo-App-Java Screenshot"
+              class="projects__row-img" loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Todo-App-Java</h3>
+            <p class="projects__row-content-desc">
+              Todo-App is a simple application, consisting of a field for entering tasks and three sections
+              for each case, Open, In progress and Done. In addition to a Nav bar.
+            </p>
+            <a href="./todo-java-app.html" class="btn btn--med btn--theme dynamicBgClr">More...</a>
+          </div>
+        </div>
+
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
             <img src="./assets/jpeg/project1.jpg" alt="Project 1 Screenshot. Full-Stack Cookbook with React"
               class="projects__row-img" loading="lazy" />
           </div>
