--- a/todo-java-app.html
+++ b/todo-java-app.html
@@ -98,13 +98,14 @@
                 Entered tasks are "Open" by default. The task will be listed in the "Open" menu, 
                 for each task there will be three buttons: Delete, Edit and Advance.
             </p>
-            <p class="project-details__desc-para">
-             <ul>
-                <li>Delete: to delete the task.</li>
-                <li>Edit: to move the task between the three lists.</li>
-                <li>Advance : to pass the task to the next list.</li>
+             <ul class="project-details__desc-para">
+                <li>- Delete: to delete the task.</li>
+                <li>- Edit: to move the task between the three lists.</li>
+                <li>- Advance : to pass the task to the next list.</li>
              </ul>
-            </p>
+             <p class="project-details__desc-para">
+              <strong>I haven't linked the app to a database, so the entries remain until the session is terminated.</strong>
+             </p>
           </div>
           <div class="project-details__tools-used">
             <h3 class="project-details__content-title">Tools Used</h3>
