--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/SgcScreenshot-7.png" alt="Space Geeks Corner Screenshot"
+            <img src="./assets/jpeg/SgcScreenshot-7.jpg" alt="Space Geeks Corner Screenshot"
               class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
@@ -216,7 +216,7 @@
 
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/SgcScreenshot-7.png" alt="Todo-App-Java Screenshot"
+            <img src="./assets/jpeg/TodoAppScreenshot.jpg" alt="Todo-App-Java Screenshot"
               class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
