--- a/spacegeekscorner.html
+++ b/spacegeekscorner.html
@@ -87,7 +87,7 @@
     <div class="main-container">
       <div class="project-details__content">
         <div class="project-details__showcase-img-cont">
-          <img src="./assets/jpeg/SgcScreenshot-7.png" alt="Space Geeks Corner Screenshot" class="project-details__showcase-img" />
+          <img src="./assets/jpeg/SgcScreenshot-7.jpg" alt="Space Geeks Corner Screenshot" class="project-details__showcase-img" />
         </div>
         <div class="project-details__content-main">
           <div class="project-details__desc">
