--- a/todo-java-app.html
+++ b/todo-java-app.html
@@ -87,7 +87,7 @@
     <div class="main-container">
       <div class="project-details__content">
         <div class="project-details__showcase-img-cont">
-          <img src="./assets/jpeg/project1.jpg" alt="Project Image" class="project-details__showcase-img" />
+          <img src="./assets/jpeg/TodoAppScreenshot.jpg" alt="Todo Java App Screenshot" class="project-details__showcase-img" />
         </div>
         <div class="project-details__content-main">
           <div class="project-details__desc">
