--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header__logo-img-cont">
           <img src="./assets/jpeg/AlanMiste-ProPic.png" alt="Alan Miste Logo Image" class="header__logo-img" />
         </div>
-        <span class="header__logo-sub">Alan Miste</span>
+        <h1 class="header__logo-sub">Alan Miste</h1>
       </div>
       <div class="header__main">
         <ul class="header__links">
@@ -73,22 +73,12 @@
   </header>
   <section class="home-hero">
     <div class="home-hero__content">
-      <!-- <h1 class="heading-primary">Hey, My name is Alan Miste</h1> -->
-      <h1 class="heading-primary">
+      <h2 class="heading-primary">
         <a href="" class="typewrite" data-period="2000"
           data-type='[ "Hey there! 👋, I&apos;m Alan.","Java-Sowftware Developer","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.", "I ❤️️ Design."]'>
           <span class="wrap"></span>
         </a>
-      </h1>
-      <div class="home-hero__info">
-        <p class="text-primary">
-          <!-- I graduated with a BA in Computer Systems since 2010, I worked for four years as a Technical Support Officer
-          in Syria before I had to emigrate. I am passionate about programming, I learned some programming languages at
-          university such as C, C++, C# and Java.
-          After I moved to Germany I took courses in Web Development and Java Development, I can now describe myself as a 
-          Junior MERN-stack / Java-Sowftware developer. -->
-        </p>
-      </div>
+      </h2>
       <div class="home-hero__cta">
         <a href="./#projects" class="btn btn--bg">Projects</a>
       </div>
