Add Redux-Shopping-Cart to Index.

--- a/index.html
+++ b/index.html
@@ -207,6 +207,20 @@
 
         <div class="projects__row">
           <div class="projects__row-img-cont">
+            <img src="./assets/jpeg/Redux-Shopping-Cart-Screenshot.jpg" alt="Redux Shopping Cart Screenshot"
+              class="projects__row-img" loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Redux Shopping Cart</h3>
+            <p class="projects__row-content-desc">
+              Redux Shopping Cart is a simple Web App, it was just to apply what I learned about Redux Toolkit.
+            </p>
+            <a href="" class="btn btn--med btn--theme dynamicBgClr">More...</a>
+          </div>
+        </div>
+
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
             <img src="./assets/jpeg/TodoAppScreenshot.jpg" alt="Todo-App-Java Screenshot"
               class="projects__row-img" loading="lazy" />
           </div>
