Update ReduxShoppingCart, add details.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <p class="projects__row-content-desc">
               Redux Shopping Cart is a simple Web App, it was just to apply what I learned about Redux Toolkit.
             </p>
-            <a href="" class="btn btn--med btn--theme dynamicBgClr">More...</a>
+            <a href="./reduxshoppingcart.html" class="btn btn--med btn--theme dynamicBgClr">More...</a>
           </div>
         </div>
 
