--- a/reduxshoppingcart.html
+++ b/reduxshoppingcart.html
@@ -92,7 +92,15 @@
                         class="project-details__showcase-img" />
                 </div>
                 <div class="project-details__content-main">
-                  
+                <div class="project-details__desc">
+                    <h3 class="project-details__content-title">Project Overview</h3>
+                    <p class="project-details__desc-para">
+                        Redux Shopping Cart is a simple web application, and may be it is traditional too.
+                        <br>
+                        This project may be small and the data that needs to be passed through the components does not need Redux to be
+                        transferred, but my goal was to practice using the Redux Toolkit.
+                    </p>
+                </div>
                     <div class="project-details__tools-used">
                         <h3 class="project-details__content-title">Tools Used</h3>
                         <div class="skills">
