Add automatic years update to copyright.

--- a/index.html
+++ b/index.html
@@ -530,7 +530,11 @@
         </div>
 
         <div class="main-footer__lower">
-          &copy; Copyright 2022. Made by
+          &copy; Copyright
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          . Made by
           <a rel="noreferrer" target="_blank" href="https://alanmiste.github.io"
             >Alan Miste</a
           >
