--- a/my-blog.html
+++ b/my-blog.html
@@ -113,34 +113,79 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                AM Blog is a simple blog, consisting of a home page to display
-                all posts, an about page, and a page to add new posts. Each post
-                can be deleted individually. I used Node.js with Express
+                <b>AM Blog</b> is a simple blog, consisting of a home page to
+                display all posts, an about page, and a page to add new
+                posts.<br />
+                Each post can be deleted individually. I used
+                <b>Node.js</b> with
+                <b>Express</b>
                 framework to mange routing, requests, server-side logic and
-                responses. To output the dynamic data that come from database I
-                used a view engine EJS
+                responses.<br />
+                <i>
+                  You can find more information about <b>Express</b>
+                  <a
+                    style="color: blue"
+                    href="https://expressjs.com"
+                    target="_blank"
+                    >here</a
+                  >. </i
+                ><br />
               </p>
               <p class="project-details__desc-para">
-                I used MongoDB to handle data, with Mongoose I created a Schema
-                for the blogs, it's simple, consisting of: title, snippet and
-                body, with a JSON object timestamps -generated and saved
-                automatically in the database- to sort blogs by creation date.
-                MVC approach It stands for Model, View, Controller. It's a
-                method of structuring the code and files to make the code more
-                modular, reusable and easier to maintain. Models are how to
-                describe the data structure and use them to interact with the
-                database. Views are how to make HTML templates that the a user
-                will see. Controllers is the thing that forms the link between
-                models and views, it use models to get data and then pass that
-                data into a view. The idea behinde this approach is to make the
-                code easier to manage and to undestand, so I splitted the code
-                into different areas of files and then each area of file has its
-                own job to do, so the route file matches incoming requests and
-                it passes those requests to the correct controller function. A
-                controller communicates with the appropriate model to get dtat
-                into a view, then the view renders that data into it's template
-                and it get sent to the browser.
+                To output the dynamic data that come from database I used a view
+                engine<b> EJS </b>
               </p>
+              <p class="project-details__desc-para">
+                <b>EJS :</b>
+                <i> Embedded JavaScript templating</i><br />
+                <b> - How dose EJS work? </b><br />
+                The view files live on the server and we want to render one
+                through the browser that view file is passed into the EJS view
+                engine to be processed, the engine looks for any kind of dynamic
+                content, variables, loops... etc.<br />
+                Then whenever it finds those it figures out the resulting HTML
+                code for those parts and in the end it spits out a valid HTML
+                page based on the template we wrote and then the HTML page with
+                the resulting data inside it will be returned to the browser,
+                and this whole process is called
+                <b> server-side </b>rendering.<br />
+                <i>
+                  You can find more information about
+                  <b> EJS </b>
+                  <a style="color: blue" href="https://ejs.co">here</a>.
+                </i>
+              </p>
+              <p class="project-details__desc-para">
+                <b>Database :</b><br />
+                I used <b>MongoDB</b> to handle data, with <b>Mongoose</b> I
+                created a Schema for the blogs, it's simple, consisting of:<br />
+                title, snippet and body, with a JSON object timestamps
+                <i>-generated and saved automatically in the database-</i> to
+                sort blogs by creation date.
+              </p>
+              <p class="project-details__desc-para">
+                <b>MVC :</b><br />
+                approach It stands for <b>Model</b>, <b>View</b>,
+                <b>Controller</b>. It's a method of structuring the code and
+                files to make the code more modular, reusable and easier to
+                maintain.<br /><br />
+                <b>Models</b> are how to describe the data structure and use
+                them to interact with the database.<br />
+                <b>Views</b> are how to make HTML templates that the a user will
+                see.<br />
+                <b>Controllers</b> is the thing that forms the link between
+                models and views, it use models to get data and then pass that
+                data into a view.<br />
+                The idea behinde this approach is to make the code easier to
+                manage and to undestand, so I splitted the code into different
+                areas of files and then each area of file has its own job to do,
+                so the route file matches incoming requests and it passes those
+                requests to the correct controller function. A controller
+                communicates with the appropriate model to get dtat into a view,
+                then the view renders that data into it's template and it get
+                sent to the browser.
+              </p>
+              <p class="project-details__desc-para"></p>
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
