--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
               >
             </div>
           </div>
-          <div class="projects__row">
+          <!-- <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
                 src="./assets/jpeg/project3.jpg"
@@ -416,7 +416,7 @@
                 >More...</a
               >
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
