--- a/project-1.html
+++ b/project-1.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Project 1 - Cookbook</title>
+    <link rel="icon" type="image/x-icon" href="./assets/png/am-favlogo.ico" />
+    <title>Alan Miste | Cookbook</title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
