--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/jpeg/am-blog-screenshot.jpg"
                 alt="My-Blog Screenshot"
                 class="projects__row-img"
                 loading="lazy"
