--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/x-icon" href="./assets/png/am-favlogo.ico" />
     <title>Alan Miste</title>
-    <meta name="description" content="Portfolio Template for Developer" />
+    <meta name="description" content="Alan Miste Portfolio" />
 
     <link rel="stylesheet" href="css/style.css" />
 
