Update AMBlog name and infos.

--- a/am-blog.html
+++ b/am-blog.html
@@ -114,11 +114,13 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                <b>AM Blog</b> is a simple blog, consisting of a home page to
-                display all posts, an about page, and a page to add new
-                posts.<br />
-                Each post can be deleted individually. I used
-                <b>Node.js</b> with
+                <b>AM Blog</b> is a simple blogs site, consisting of a
+                "<b>Blogs</b>" page to display all posts, an "<b>About</b>"
+                page, and "<b>New Blog</b>" page to add new posts if the user is
+                logged in. I created a simple sign up and sign in pages, and for
+                authentication I used <b>JWT</b> (JSON Web Tokens). The logged
+                in user can delete there own blogs individually.<br /><br />
+                I used <b>Node.js</b> with
                 <b>Express</b>
                 framework to mange routing, requests, server-side logic and
                 responses.<br />
@@ -185,6 +187,38 @@
                 communicates with the appropriate model to get dtat into a view,
                 then the view renders that data into it's template and it get
                 sent to the browser.
+              </p>
+              <p class="project-details__desc-para">
+                <b>Authentication and validation :</b><br />
+                for user registration, login and proper data entry verification
+                process I used:<br /><br />
+                <b>- JWT</b><br />
+                <i>JSON Web Token</i> is an open standard (RFC 7519) that
+                defines a compact and self-contained way for securely
+                transmitting information between parties as a JSON object. This
+                information can be verified and trusted because it is digitally
+                signed. JWTs can be signed using a secret (with the HMAC
+                algorithm) or a public/private key pair using RSA or ECDSA.<br />
+                <i>
+                  You can find more information about
+                  <b> JWT </b>
+                  <a style="color: blue" href="https://jwt.io/">here</a>. </i
+                ><br /><br />
+                <b>- Validator:</b><br />
+                It is a third-party validation package, this package has
+                different functions inside it that we can use to validate
+                differnt things and one of those things is to validate an
+                E-mail. I used "<i>isEmail</i> " instead of creating my own
+                function to validate the E-mail.<br />
+                <i>
+                  You can find more information about
+                  <b> Validator </b>
+                  <a
+                    style="color: blue"
+                    href="https://www.npmjs.com/package/validator"
+                    >here</a
+                  >.
+                </i>
               </p>
               <p class="project-details__desc-para"></p>
             </div>
