--- a/index.html
+++ b/index.html
@@ -315,13 +315,17 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">My-Blog</h3>
+              <h3 class="projects__row-content-title">AM Blog</h3>
               <p class="projects__row-content-desc">
-                AM Blog is a simple blog, consisting of a home page to display
-                all posts, an about page, and a page to add new posts.
+                AM Blog is a simple blogs site, consisting of a "Blogs" page to
+                display all posts, an "About" page, and "New Blog" page to add
+                new posts if the user is logged in. I created a simple sign up
+                and sign in pages, and for authentication I used JWT (JSON Web
+                Tokens). The logged in user can delete there own blogs
+                individually.
               </p>
               <a
-                href="./my-blog.html"
+                href="./am-blog.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 >More...</a
               >
