--- a/spacegeekscorner.html
+++ b/spacegeekscorner.html
@@ -88,10 +88,7 @@
       <div class="project-cs-hero__content">
         <h1 class="heading-primary">Space Geeks Corner</h1>
         <div class="project-cs-hero__cta">
-          <a
-            href="https://spacegeekscorner.herokuapp.com"
-            class="btn btn--bg"
-            target="_blank"
+          <a href="./spacegeekscorner.html#seeLive" class="btn btn--bg"
             >Live Link</a
           >
         </div>
@@ -158,13 +155,23 @@
                 <div class="skills__skill">RestAPIs</div>
               </div>
             </div>
-            <div class="project-details__links">
+            <div id="seeLive" class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
+              <p class="project-details__desc-para">
+                I initially deployed the project on Heroku's free hosting plan.
+                However, recently, the free plan has been discontinued. In
+                response to their notification about the cancellation of the
+                free plan, I created a presentation video showcasing the app's
+                functionality and appearance.<br />
+                This video serves as a temporary solution, allowing visitors to
+                quickly view and experience the app without the need to clone
+                the repository or install any libraries.
+              </p>
               <a
-                href="https://spacegeekscorner.herokuapp.com"
+                href="https://youtu.be/Vfjd2eig3BU"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-                >Live Link</a
+                >Go to video</a
               >
               <a
                 href="https://github.com/alanmiste/SpaceGeeksCorner"
