--- a/reduxshoppingcart.html
+++ b/reduxshoppingcart.html
@@ -88,91 +88,7 @@
         </div>
       </div>
     </section>
-    <footer class="main-footer">
-      <div class="main-container">
-        <div class="main-footer__upper">
-          <div class="main-footer__row main-footer__row-1">
-            <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>Social</span>
-            </h2>
-            <div class="main-footer__social-cont">
-              <a
-                target="_blank"
-                rel="noreferrer"
-                href="https://www.linkedin.com/in/alanhassan"
-              >
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/linkedin-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a
-                target="_blank"
-                rel="noreferrer"
-                href="https://github.com/alanmiste"
-              >
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/github-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a
-                target="_blank"
-                rel="noreferrer"
-                href="https://twitter.com/AlanMiste"
-              >
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a
-                target="_blank"
-                rel="noreferrer"
-                href="https://www.facebook.com/alanmiste"
-              >
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/facebook-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a
-                target="_blank"
-                rel="noreferrer"
-                href="https://www.instagram.com/alanmiste"
-              >
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="./assets/png/insta-ico.png"
-                  alt="icon"
-                />
-              </a>
-            </div>
-          </div>
-          <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">Alan Miste</h4>
-            <p class="main-footer__short-desc">
-              Java-Software / MERN-Stack Developer
-            </p>
-          </div>
-        </div>
-
-        <div class="main-footer__lower">
-          &copy; Copyright
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          . Made by
-          <a rel="noreferrer" target="_blank" href="https://alanmiste.github.io"
-            >Alan Miste</a
-          >
-        </div>
-      </div>
-    </footer>
+    <footer class="main-footer"></footer>
     <script src="./index.js"></script>
     <script src="./components.js"></script>
   </body>
