Add wordpress link and icon.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           >
             <img
               src="./assets/png/linkedin-ico.png"
-              alt="icon"
+              alt="linkedin icon"
               class="home-hero__social-icon"
             />
           </a>
@@ -58,7 +58,20 @@
           >
             <img
               src="./assets/png/github-ico.png"
-              alt="icon"
+              alt="github icon"
+              class="home-hero__social-icon"
+            />
+          </a>
+        </div>
+        <div class="home-hero__social">
+          <a
+            href="https://alanmiste.wordpress.com"
+            target="_blank"
+            class="home-hero__social-icon-link"
+          >
+            <img
+              src="./assets/png/wordpress-ico.png"
+              alt="wordpress icon"
               class="home-hero__social-icon"
             />
           </a>
