Change twitter icom to X.

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             class="home-hero__social-icon-link"
           >
             <img
-              src="./assets/png/twitter-ico.png"
-              alt="icon"
+              src="./assets/png/x-twitter-icon.png"
+              alt="x twitter icon"
               class="home-hero__social-icon"
             />
           </a>
@@ -97,7 +97,7 @@
           >
             <img
               src="./assets/png/facebook-ico.png"
-              alt="icon"
+              alt="facebook icon"
               class="home-hero__social-icon"
             />
           </a>
@@ -110,7 +110,7 @@
           >
             <img
               src="./assets/png/insta-ico.png"
-              alt="icon"
+              alt="instagram icon"
               class="home-hero__social-icon"
             />
           </a>
