Add downloadable CV.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         </h2>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
+          <a
+            href="./assets/pdf/Alan-Hassan-Lebenslauf.pdf"
+            class="btn btn--bg downloadBtn"
+            download
+            >Download CV <span class="downloadCv"></span
+          ></a>
         </div>
       </div>
       <div class="home-hero__socials">
