Add text to H2.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             href=""
             class="typewrite"
             data-period="2000"
-            data-type='[ "Hey there! 👋, I&apos;m Alan.","Java-Sowftware Developer","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.", "I ❤️️ Design."]'
+            data-type='[ "Hey there! 👋", "I&apos;m Alan 😊.","IT Engineer","Java-Sowftware Developer","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.","I ❤️️ Technology" , "I ❤️️ Design."]'
           >
             <span class="wrap"></span>
           </a>
