Create JS folder.

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     </section>
     <footer class="main-footer"></footer>
 
-    <script src="./components.js"></script>
+    <script src="./javascript/components.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
